finished mobile version

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,196 @@
-* {
+@font-face {
+  font-family: "Young Serif";
+  src: url(./assets/fonts/young-serif/YoungSerif-Regular.ttf);
+}
+
+@font-face {
+  font-family: "Outfit";
+  src: url(./assets/fonts/outfit/Outfit-VariableFont_wght.ttf);
+}
+
+html {
+  --stone-900: #312E2C;
+  --stone-600: #5F564D;
+  --stone-150: #E3DDD7;
+  --stone-100: #F3E5D7;
+  --rose-800: #7A284E;
+  --rose-50: #FFF7FB;
+  --brown-800: #854632;
+}
+
+*,
+*::before,
+*::after {
   box-sizing: border-box;
+  margin: 0;
+}
+
+p,
+span,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+p {
+  text-wrap: pretty;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: balance;
+}
+
+body {
+  font-family: "Outfit", "sans-serif";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 150%;
+  letter-spacing: 0px;
+  color: var(--stone-900);
+  background-color: var(--stone-100);
+  -webkit-font-smoothing: antialiased;
 }
 
 img {
   display: block;
-  max-width: 100%;
+  width: calc(100% + 2 * 2rem);
+  margin-inline: -2rem;
+}
+
+article {
+  background-color: white;
+  padding: 0 2rem 2.5rem 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  max-width: 46rem;
+  margin-inline: auto;
+}
+
+h1 {
+  font-family: "Young Serif", "serif";
+  font-size: 2.25rem;
+  font-weight: 400;
+  line-height: 100%;
+  letter-spacing: 0px;
+  padding-block: 2.5rem 1.5rem;
+}
+
+h2 {
+  font-family: "Young Serif", "serif";
+  font-size: 1.75rem;
+  line-height: 100%;
+  letter-spacing: 0px;
+  color: var(--rose-800);
+  margin-bottom: 1.5rem;
+}
+
+h3 {
+  font-size: 1.25rem;
+  line-height: 100%;
+  letter-spacing: 0px;
+  color: var(--rose-800);
+  margin-bottom: 1rem;
+}
+
+hr {
+  width: 100%;
+  height: 1px;
+  color: var(--stone-150);
+}
+
+.time {
+  padding: 1.5rem;
+  background-color: var(--rose-50);
+  border-radius: 12px;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+  margin-left: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+ul li {
+  display: flex;
+  align-items: center;
+}
+
+ul li::before {
+  content: "•";
+  margin-left: 0.5rem;
+  margin-right: 28px;
+  font-size: 1.2em;
+  color: var(--rose-800);
+  flex-shrink: 0;
+}
+
+li span {
+  font-weight: bold;
+}
+
+ol {
+  list-style: none;
+  counter-reset: num;
+  padding-left: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+ol li {
+  counter-increment: num;
+  display: flex;
+}
+
+ol li::before {
+  content: counter(num) ". ";
+  color: var(--rose-800);
+  font-weight: bold;
+  display: block;
+  flex-shrink: 0;
+  margin-right: 1rem;
+}
+
+.nutrition p {
+  padding-bottom: 1.5rem;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+tr:not(:last-child) td {
+  padding-bottom: 0.75rem;
+}
+
+tr:not(:first-child) td {
+  padding-top: 0.75rem;
+}
+
+td:first-child {
+  padding-left: 2rem;
+}
+
+td:nth-child(2) {
+  color: var(--rose-800);
+  font-weight: bold;
+  padding-right: 1rem;
+}
+
+tr:not(:last-child) {
+  border-bottom: 1px solid var(--stone-150);
 }
