--- a/styles.css
+++ b/styles.css
@@ -60,12 +60,6 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-img {
-  display: block;
-  width: calc(100% + 2 * 2rem);
-  margin-inline: -2rem;
-}
-
 article {
   background-color: white;
   padding: 0 2rem 2.5rem 2rem;
@@ -74,6 +68,12 @@ article {
   gap: 2rem;
   max-width: 46rem;
   margin-inline: auto;
+}
+
+img {
+  display: block;
+  width: calc(100% + 2 * 2rem);
+  margin-inline: -2rem;
 }
 
 h1 {
@@ -193,4 +193,25 @@ td:nth-child(2) {
 
 tr:not(:last-child) {
   border-bottom: 1px solid var(--stone-150);
+}
+
+@media screen and (min-width: 600px) {
+  img {
+    width: 100%;
+    margin: 0;
+    border-radius: 12px;
+  }
+
+  .wrapper {}
+
+  article {
+    padding: 2.5rem;
+    border-radius: 24px;
+    margin-top: 8rem;
+    width: calc(100vw - 9vw);
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
 }
