--- a/styles.css
+++ b/styles.css
@@ -195,19 +195,17 @@ tr:not(:last-child) {
   border-bottom: 1px solid var(--stone-150);
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 610px) {
   img {
     width: 100%;
     margin: 0;
     border-radius: 12px;
   }
 
-  .wrapper {}
-
   article {
     padding: 2.5rem;
     border-radius: 24px;
-    margin-top: 8rem;
+    margin-block: 8rem;
     width: calc(100vw - 9vw);
   }
 
