--- a/styles.css
+++ b/styles.css
@@ -88,9 +88,10 @@ h1 {
 h2 {
   font-family: "Young Serif", "serif";
   font-size: 1.75rem;
+  font-weight: 400;
   line-height: 100%;
   letter-spacing: 0px;
-  color: var(--rose-800);
+  color: var(--brown-800);
   margin-bottom: 1.5rem;
 }
 
@@ -98,6 +99,7 @@ h3 {
   font-size: 1.25rem;
   line-height: 100%;
   letter-spacing: 0px;
+  font-weight: 400;
   color: var(--rose-800);
   margin-bottom: 1rem;
 }
@@ -133,7 +135,7 @@ ul li::before {
   margin-left: 0.5rem;
   margin-right: 28px;
   font-size: 1.2em;
-  color: var(--rose-800);
+  color: var(--brown-800);
   flex-shrink: 0;
 }
 
@@ -157,7 +159,7 @@ ol li {
 
 ol li::before {
   content: counter(num) ". ";
-  color: var(--rose-800);
+  color: var(--brown-800);
   font-weight: bold;
   display: block;
   flex-shrink: 0;
@@ -186,7 +188,7 @@ td:first-child {
 }
 
 td:nth-child(2) {
-  color: var(--rose-800);
+  color: var(--brown-800);
   font-weight: bold;
   padding-right: 1rem;
 }
