--- a/styles.css
+++ b/styles.css
@@ -99,15 +99,16 @@ h3 {
   font-size: 1.25rem;
   line-height: 100%;
   letter-spacing: 0px;
-  font-weight: 400;
+  font-weight: 700;
   color: var(--rose-800);
   margin-bottom: 1rem;
 }
 
 hr {
   width: 100%;
-  height: 1px;
+  height: 0.5px;
   color: var(--stone-150);
+  opacity: 0.5;
 }
 
 .time {
